--- a/blog1.html
+++ b/blog1.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-10">
                     <h3 class="mb-4">🛠 Tools & Techniques I Mastered</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
-                        <div class="position-relative mb-4">
+                        <div class="position-relative mb-10">
                             <h6>During the internship, I honed my skills in Blender, especially when it came to modeling for animation and preparing assets for production. 
                                 I also learned how to troubleshoot issues quickly, because in a production timeline, there's not always time to overthink. Speed and efficiency became second nature.</h6>
                         </div>
@@ -97,46 +97,46 @@
                         <div class="position-relative mb-4">
                             <h6>The most challenging part of this animation was the parkour and running sequence. 
                                 It required extensive adjustments and detailed checks—especially around momentum and physical logic—to make the movement as realistic and believable as possible.</h6>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/KSHJcgn4nsw?si=HjJl7Gx7t_HzOf2k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/KSHJcgn4nsw?si=HjJl7Gx7t_HzOf2k" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
 
                             <p></p>
                             <p></p>
                             <h6>In this animation, my task was to pose and animate a dinosaur. The process wasn’t too difficult, 
                                 as it mainly involved observing dinosaur behavior and using imagination to visualize the scene effectively.</h6>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/XdsZZ5ae0Y4?si=oUOdftLya8oWa-9r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/XdsZZ5ae0Y4?si=oUOdftLya8oWa-9r" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
 
                             <p></p>
                             <p></p>
                             <h6>This project was assigned by my supervisor as a learning exercise to help me understand how physics works in animation.</h6>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Lhc9rvm7e7k?si=ffSvcE6RTOb_GHYd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/Lhc9rvm7e7k?si=ffSvcE6RTOb_GHYd" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
 
                             <p></p>
                             <p></p>
                             <h6>In this task, I animated a character kicking a ball against a wall, which then bounced back and hit the character. It was a relatively simple animation, 
                                 but still required attention to timing and impact to make the motion feel believable.</h6>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/EElCGZd3i_s?si=5pBMFv60FOEp4-zB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/EElCGZd3i_s?si=5pBMFv60FOEp4-zB" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
 
                             <p></p>
                             <p></p>
                             <h6>This is one month of task summary</h6>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/NUNldaXM_d4?si=kR6GOfDp7XUmofpH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/NUNldaXM_d4?si=kR6GOfDp7XUmofpH" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
 
                             <p></p>
                             <p></p>
                             <p></p>
                             <h6>This was a solo animation project I worked on for an entire month. It was a challenging experience—there were days when my motivation ran low and I felt like giving up. 
                                 However, thanks to patience and persistence, I pushed through my limits and successfully completed the project before the deadline.</h6><h5>all because of putting love in it.</h5>
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZvZ1LzNBPSk?si=tcmdvDkvh54oigkZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/hdZPNqeTQnc?si=zQY-ZnDKoMFHFg2l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/ZvZ1LzNBPSk?si=tcmdvDkvh54oigkZ" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/hdZPNqeTQnc?si=zQY-ZnDKoMFHFg2l" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
 
 
                             <p></p>
                             <p></p>
                             <p></p>
                             <h6>This animation was created during my spare time when no active tasks were assigned. I used the opportunity to practice and explore new techniques on my own.</h6>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/sWk6LV5e-sw?si=TLPrm0uFOVLM3JGl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/dTM59BFHogY?si=zCSJhl2ABnkkcpCn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/EqkaHae9rHg?si=WxQxCjlgGqho6_51" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/sWk6LV5e-sw?si=TLPrm0uFOVLM3JGl" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/dTM59BFHogY?si=zCSJhl2ABnkkcpCn" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/EqkaHae9rHg?si=WxQxCjlgGqho6_51" title="YouTube video player"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
 
 
                             
@@ -163,8 +163,10 @@
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
-            <div class="d-flex justify-content-center mb-20">
-                <a href="index.html#blog" class="btn btn-outline-light d-none d-lg-block"> <i class="fa fa-angle-double-down text-white" style="font-size: 50px;">Return</i></a>
+            <div class="d-flex justify-content-center mb-4">
+                <a href="index.html#blog" class="btn btn-outline-light">
+                    <i class="fa fa-angle-double-down text-white" style="font-size: 50px;">Return</i>
+                </a>
             </div>
         </div>
     </div>
