--- a/blog3.html
+++ b/blog3.html
@@ -188,8 +188,10 @@
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
-            <div class="d-flex justify-content-center mb-20">
-                <a href="index.html#blog" class="btn btn-outline-light d-none d-lg-block"> <i class="fa fa-angle-double-down text-white" style="font-size: 50px;">Return</i></a>
+            <div class="d-flex justify-content-center mb-4">
+                <a href="index.html#blog" class="btn btn-outline-light">
+                    <i class="fa fa-angle-double-down text-white" style="font-size: 50px;">Return</i>
+                </a>
             </div>
         </div>
     </div>
