--- a/index.html
+++ b/index.html
@@ -83,10 +83,9 @@
                     <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile-1.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
-                    <h3 class="text-white font-weight-normal mb-3">My Name Is</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Loem Singly</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Graphic Desginer, Illstrator, Animator</div>
+                    <div class="typed-text d-none">Graphic Desginer, Illustrator, Animator</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <!-- <a href="" class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
